fix text-wrap styling issue when dropping a card, remove logs and unhelpful comments

--- a/src/pages/TimelinePage/index.css
+++ b/src/pages/TimelinePage/index.css
@@ -27,7 +27,6 @@
   display: flex;
   align-items: center;
   overflow-x: scroll;
-  white-space: nowrap;
 }
 
 .card-container {
